# passport-desktop

./: Cargo.toml  package-lock.json  package.json  tsconfig.json
__test__/: index.spec.ts
src/node/: key_creation_option.rs  passport.rs  public_key_encoding.rs  verification_result.rs
src/win/: passport.rs
ts-src/: dummies.ts  index.ts
