[package]
edition = "2021"
name = "passport-desktop"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.12", default-features = false, features = [
    "napi4",
    "napi6",
    "tokio_rt",
    "deferred_trace"
] }
napi-derive = "2.16.12"
tokio = "1.40.0"
futures = "0.3.31"

[target.'cfg(windows)'.dependencies]
widestring = "1.1.0"
windows = { version = "0.58.0", features = [
    "Foundation",
    "Security_Credentials_UI",
    "Security_Cryptography",
    "Security_Cryptography_Core",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
